# blpgen

./: CMakeLists.txt  main.cc
data/: APSpline_160MeV_elastic.C  APSpline_160MeV_inelastic.C  APSpline_200MeV_elastic.C  APSpline_200MeV_inelastic.C  CrossSectionAnalyzingPower.csv  XSLog150MeV.C  XSLog160MeV.C  XSLog170MeV.C  XSLog180MeV.C  XSLog190MeV.C  XSLog200MeV.C  XSLog210MeV.C  XSLog220MeV.C  XSLog230MeV.C  XSLog240MeV.C  XSSpline_160MeV_elastic.C  XSSpline_160MeV_inelastic.C  XSSpline_200MeV_elastic.C  XSSpline_200MeV_inelastic.C  inelastic_analyzingpower_443_200MeV.csv  inelastic_crosssection_443_200MeV.csv
include/: BeamGen.hh  DetectorConfig.hh  ElasticScattering.hh  EvtGen.hh  IPGen.hh  InelasticScattering.hh  PhysicalConstants.hh  \
src/: BeamGen.cc  DetectorConfig.cc  ElasticScattering.cc  EvtGen.cc  IPGen.cc  InelasticScattering.cc
temp/: AnalysisAN.C  CompareTheta_vs_Meyer.C  CompareTheta_vs_T_Sampling.C  ComputeNormalization.C  DiagnoseInelasticXS.C  DiagnoseXSComparison.C  QuantifySystematics.C  TestMeyerSampling.C  TestMeyerSampling_Diagnostic.C  TestMeyerSampling_LogScale.C  TestMeyer_LinearBins.C  TestMeyer_Phase4.C  sigma_pC_Elas_EventGenerator.C
temp/include/: AnalyzingPowerUtils.h  EventGenerator.h  Kinematics.h  MeyerScattering.h  ThreadUtils.h
temp/src/: AnalyzingPowerUtils.C  EventGenerator.C  Kinematics.C  MeyerScattering.C
